set width 100% on navlinks to fix header getting squished

--- a/style.css
+++ b/style.css
@@ -199,6 +199,7 @@ a {
 .underline-on-hover {
   transition: text-decoration 0.5s ease-in-out;
   text-decoration: transparent;
+  width: 100%;
 }
 
 .underline-on-hover > img {
